--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,12 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.side-panel {
+    width: 30%;
+}
+
+.current-weather {
+    width: 70%;
+    font-size: 20px;
+    font-weight: 800;
+}
